--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--　このサイトは何か　説明する場所　-->
+    <!-- このサイトは何か 説明する場所 -->
     <meta name="description" content="Sato Miyuの自己紹介">
-    <!-- タイトルの設定　-->
+    <!-- タイトルの設定 -->
     <title>PORTFOLIO</title>
-    <!-- スタイルシート　-->
+    <!-- スタイルシート -->
     <link rel="stylesheet" href="style.css">
 </head>
+
+
+
 <body>
     <!--
         headerタグの設定
@@ -24,5 +27,47 @@
             </a>
         </h1>
     </header>
+<!--
+    mainタグの作成
+    profile用とwork用の箱を作成する
+    divタグを使っていきます
+-->
+    <div class="block-main">
+        <!--
+            profileの箱
+        -->
+        <div class="box profile">
+            <h2 class="subtitle">
+                <span class="color-green">P</span>rofile
+            </h2>
+            <div class="item-list">
+                <img src="img/profile.jpg" alt="プロフィール画像">
+                <b>Sato Miyu</b>
+                <p class="color-green">HTML/ CSS/ PHP/ MySQL/Laravel/AdobeXD</p>
+                <p>ここにテキストが入りますここにテキストが入りますここにテキストが入りますここにテキストが入りますここにテキストが入りますここにテキストが入りますここにテキストが入りますここにテキストが入ります</p>
+            </div>
+            <ul class="icon-list">
+                <li>
+                    <a href="">
+                        <img src="img/github_small.jpg" alt="Githubアイコン">
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="img/twitter2.jpg" alt="twitterアイコン">
+                    </a>
+                </li>
+            </ul>
+
+    </div>
+
+    <!--
+        workの箱
+    -->
+    <div>
+
+    </div>
+
+
 </body>
 </html>
