--- a/index.html
+++ b/index.html
@@ -64,10 +64,52 @@
     <!--
         workの箱
     -->
-    <div>
+    <div class="box-works">
+        <h2 class="subtitle">
+            <span class="color-green">W</span>orks
+        </h2>
 
+        <ul class="works-list">
+            <li>
+                <img src="img/スクリーンショット 2021-06-28 21.23.13.png" alt="Twitterクローンの画像">
+                <h3>Twitterクローン</h3>
+                <span>HTML/ CSS/ PHP/ MySQL</span>
+                <div class="link">
+                    <a href="">Webサイト</a>
+                    <a href="">GitHub</a>
+                </div>
+            </li>
+
+            <li>
+                <img src="img/スクリーンショット 2021-06-28 21.23.13.png" alt="Twitterクローンの画像">
+                <h3>Twitterクローン</h3>
+                <span>HTML/ CSS/ PHP/ MySQL</span>
+                <div class="link">
+                    <a href="">Webサイト</a>
+                    <a href="">GitHub</a>
+                </div>
+            </li>
+
+            <li>
+                <img src="img/スクリーンショット 2021-06-28 21.23.13.png" alt="Twitterクローンの画像">
+                <h3>Twitterクローン</h3>
+                <span>HTML/ CSS/ PHP/ MySQL</span>
+                <div class="link">
+                    <a href="">Webサイト</a>
+                    <a href="">GitHub</a>
+                </div>
+            </li>
+        </ul>
     </div>
 
+    <!--
+        fooderタグの作成
+        ・copyrightの設定
+        pタグを使う
+    -->
 
+    <footer class="block-footer">
+        <p>Copyright @TECH I.S. Ink.</p>
+    </footer>
 </body>
 </html>
