--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!--
+        レスポンシブの設定
+        ・viewportの設定
+    -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- このサイトは何か 説明する場所 -->
     <meta name="description" content="Sato Miyuの自己紹介">
@@ -44,12 +48,12 @@
                 <img src="img/profile.jpg" alt="プロフィール画像">
                 <b>Sato Miyu</b>
                 <p class="color-green">HTML/ CSS/ PHP/ MySQL/Laravel/AdobeXD</p>
-                <p>ここにテキストが入りますここにテキストが入りますここにテキストが入りますここにテキストが入りますここにテキストが入りますここにテキストが入りますここにテキストが入りますここにテキストが入ります</p>
+                <p>ここにテキストが入りますここにテキストが入りますここにテキストが入りますここにテキストが入りますここにテキストが入ります</p>
             </div>
             <ul class="icon-list">
                 <li>
                     <a href="">
-                        <img src="img/github_small.jpg" alt="Githubアイコン">
+                        <img src="img/github.jpg" alt="Githubアイコン">
                     </a>
                 </li>
                 <li>
